# moffee

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.es.md  README.ja.md  README.md  SECURITY.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: python-app-test.yaml
docs/: configuration.md  getting-started.md  index.md  installation.md  requirements.txt  syntax.md  theme.md
mdbeamer/: main.py  markdown.py  md_helper.py  splitter.py
mdbeamer/utils/: md_helper.py  md_obsidian_ext.py
moffee/: README.txt  builder.py  cli.py  compositor.py  main.py  markdown.py
moffee/templates/base/: index.html
moffee/templates/base/css/: styles.css
moffee/templates/base/js/: extension.js  main.js
moffee/templates/base/layouts/: centered.html  content.html  product.html
moffee/templates/beam/css/: extension.css
moffee/templates/beam/layouts/: centered.html  content.html
moffee/templates/beamer/css/: extension.css
moffee/templates/beamer/js/: extension.js
moffee/templates/blue/css/: extension.css
moffee/templates/default/: index.html
moffee/templates/default/css/: extension.css  styles.css
moffee/templates/default/js/: main.js
moffee/templates/default/layouts/: centered.html  product.html
moffee/templates/gaia/css/: extension.css
moffee/templates/robo/css/: extension.css
moffee/utils/: file_helper.py  math_escape_ext.py  md_helper.py  md_obsidian_ext.py
moffie/: compositor.py  main.py  markdown.py  splitter.py
moffie/utils/: md_helper.py
templates/base/: index.html
templates/base/css/: styles.css
templates/base/js/: main.js
templates/base/layouts/: centered-title.html  centered.html  content.html  product.html  split.html  top-down.html
templates/default/: base.html  main.js  styles.css
templates/default/layouts/: centered-title.html  split.html  top-down.html
tests/: test_builder.py  test_copy_assets.py  test_copy_statics.py  test_md_helper.py  test_md_obsidian_ext.py  test_obsidian_ext.py  test_paginate.py  test_parse_deco.py  test_redirect_paths.py  test_redirect_url.py  test_rendering.py
