[tool.poetry]
name = "moffee"
version = "0.2.7"
description = "A slide maker that transform markdown into slides."
authors = ["Wenbo Pan <pixelwenbo@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/bmpixel/moffee"
repository = "https://github.com/bmpixel/moffee"
keywords = ["markdown", "slides", "presentation", "CLI"]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.4"
markdown = "^3.6"
pyyaml = "^6.0.1"
pymdown-extensions = "^10.8.1"
livereload = "^2.7.0"
click = "^8.1.7"
beautifulsoup4 = "^4.12.3"
myst-parser = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
wat-inspector = "^0.3.3"
pygments = "^2.18.0"
ipdb = "^0.13.13"
flake8 = "^7.1.1"
black = "^24.8.0"
pre-commit = "^3.8.0"
mkdocs = "^1.6.0"
mkdocs-callouts = "^1.14.0"

[tool.ipdb]
context = 15

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
moffee = "moffee.cli:cli"

[tool.flake8]
exclude = [
    ".venv",
    "venv",
    "env",
    "*/migrations/*",
]
max-complexity = 10
ignore = ["E9", "F63", "F7", "F82"]
per-file-ignores = [
    "__init__.py:F401",
]

[tool.flake8.import-order]
application-import-names = ["your_project_name"]
import-order-style = "google"
